issue #1466 "add search and replace feature" 1) highlight current match with orange like chrome does, not dark blue. 2) the 4 widgets (entire notebook, selected cell, case sensitive, wrap search) should be active if i click on the text, not just on the button/box. 3) the "Replace" button should operate on the current match, and then find the next match. 4) -- NOT FINISHED 5) in ambiance theme, fix the checkboxes, and instead of yellow use blue (#2060f0).

--- a/core/src/main/web/app/styles/theme/ambiance.scss
+++ b/core/src/main/web/app/styles/theme/ambiance.scss
@@ -71,6 +71,17 @@ $ef-active-control-bg:  #3B99FC;
 
 $markdown-heading-color: #aac6e3;
 
+$cm-search-mark-all-color: #FFFF00; 
+$cm-search-mark-color: #F26D00;
+
+.search-find-all-selected-background{
+  background-color: $cm-search-mark-all-color;
+}
+
+.search-selected-background{
+  background-color: $cm-search-mark-color;
+}
+
 $scrollbar-width: 8px; // default size scrollbar looks ugly in this theme
 $scrollbar-track-color: $std-btn-bg;
 $text-cursor: url('../images/ambiance/ambiance-i-beam.png') 5 9, text;
@@ -79,8 +90,6 @@ $marked-argument-unchanged-border: inset 0 0 5px #158d76;
 $marked-argument-unchanged-color: #1c96be;
 
 $marked-argument-changed-border: inset 0 0 5px #285d95;
-
-
 
 $ui-icons: url('../images/ambiance/ui-icons_ambiance_256x240.png');
 
