--- a/core/src/main/web/app/styles/theme/base-theme.scss
+++ b/core/src/main/web/app/styles/theme/base-theme.scss
@@ -35,6 +35,17 @@
       cursor: $text-cursor;
     }
   }
+    
+  $cm-search-mark-all-color:	#2060f0;
+  $cm-search-mark-color: 		#F26D00;
+    
+  .search-find-all-selected-background{
+  	background-color: $cm-search-mark-all-color;
+  }
+  
+  .search-selected-background{
+    background-color: $cm-search-mark-color;
+  }
 
   header {
     .navbar-left {
@@ -786,13 +797,3 @@
   }
 
 }
-
-  .yellow-background{
-  	background-color: $cm-search-mark-all-color;
-  }
-  
-  .selected-background{
-    background-color: $cm-selection-color;
-  }
-
-
