--- a/core/src/main/web/app/styles/variables.scss
+++ b/core/src/main/web/app/styles/variables.scss
@@ -84,5 +84,3 @@ $blockquote-border-color: $light-grey;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
 }
-
-$cm-search-mark-all-color: #FFFF00;
